--- a/pokedex/src/sass/_pokemonDetails.scss
+++ b/pokedex/src/sass/_pokemonDetails.scss
@@ -34,55 +34,78 @@
 
     &__img {
       max-width: 90%;
-      max-height: 45%;
+      // max-height: 45%;
       align-items: center;
       justify-content: center;
       margin-bottom: 100px;
       @include media-breakpoint-down(sm) {
-        max-width: 45%;
         z-index: 1;
-        max-height: 100%;
-        min-height: 70%;
+        // min-height: 90%;
         margin-bottom: auto;
         margin-top: 50px;
       }
     }
+
     &__favorite-area {
       display: none;
-      justify-content: end;
+      justify-content: center;
       align-items: center;
       visibility: hidden;
       @include media-breakpoint-down(sm) {
         display: flex;
+        align-items: center;
+        justify-content: space-between;
         position: absolute;
         top: 10px;
-        right: 15px;
+        right: 5px;
         visibility: visible;
+        width: 100%;
       }
 
-      &__add-button {
-        @extend %font-value;
-        display: flex;
-        // font-family: 'Nunito';
-        // font-style: normal;
-        // font-weight: bold;
-        border-radius: 4px;
-        background: var(--blue-color);
-        border: transparent;
-        color: white;
-        cursor: pointer;
-        padding: 17px 16px;
-        width: 120px;
-        height: 30px;
-        text-align: center;
-        font-size: 12px;
+      &__previous-page {
+        display: none;
+        justify-content: end;
         align-items: center;
-        margin-right: 10px;
+        visibility: hidden;
+        @include media-breakpoint-down(sm) {
+          display: flex;
+          align-items: center;
+          justify-content: start;
+          visibility: visible;
+          padding-left: 15px;
+          &__icon {
+            width: 35px;
+            height: 30px;
+            padding-left: auto;
+          }
+        }
       }
 
-      &__icon {
+      &__button-area {
         display: flex;
-        align-items: center;
+        padding-right: 15px;
+        &__add-button {
+          @extend %font-value;
+          display: flex;
+          border-radius: 4px;
+          background: var(--blue-color);
+          border: transparent;
+          color: white;
+          cursor: pointer;
+          padding: 17px 16px;
+          width: 120px;
+          height: 30px;
+          text-align: center;
+          font-size: 12px;
+          align-items: center;
+          margin-right: 10px;
+        }
+
+        &__icon {
+          display: flex;
+          align-items: center;
+          padding: 3px;
+        }
       }
     }
   }
@@ -136,9 +159,6 @@
         &__add-button {
           @extend %font-value;
           display: flex;
-          // font-family: 'Nunito';
-          // font-style: normal;
-          // font-weight: bold;
           border-radius: 4px;
           background: var(--blue-color);
           border: transparent;
@@ -254,9 +274,6 @@
         display: inline-block;
         font-size: 10px;
         line-height: 12px;
-        // font-family: 'Nunito';
-        // font-style: normal;
-        // font-weight: bold;
       }
     }
     &__stats {
@@ -298,6 +315,7 @@
     &__teams {
       padding-left: 15px;
       margin-top: 50px;
+      margin-bottom: 100px;
       @include media-breakpoint-down(sm) {
         margin-bottom: 100px;
       }
