--- a/pokedex/src/sass/_pokemonDetails.scss
+++ b/pokedex/src/sass/_pokemonDetails.scss
@@ -16,7 +16,7 @@
 }
 
 .details-about {
-  padding: 15px 0 0 15px;
+  padding: 15px 0 0 0;
   &__paragraph {
     font-family: Nunito;
     font-style: normal;
@@ -38,15 +38,16 @@
 
 .details-evolutions__container {
   display: flex;
-  justify-content: center;
   align-items: center;
+
   &__img {
-    padding: 10px;
+    padding: 5px;
     border-radius: 100px;
     border: 1px solid #edeef8;
-    height: 100px;
-    width: 100px;
-    margin: 20px 20px 0px 20px;
+    height: 100%;
+    width: 100%;
+    max-width: 104px;
+    margin-top: 50px;
   }
 
   &__id {
@@ -56,6 +57,7 @@
     font-size: 10px;
     text-align: center;
     color: #6e7a96;
+    margin-bottom: 0px;
   }
 
   &__name {
@@ -66,6 +68,7 @@
     text-align: center;
     color: #2b3140;
     text-transform: capitalize;
+    margin-top: 5px;
   }
 }
 
@@ -137,7 +140,6 @@
           align-items: center;
           justify-content: start;
           visibility: visible;
-          padding-left: 15px;
           &__icon {
             width: 35px;
             height: 30px;
@@ -178,7 +180,7 @@
     display: inline-block;
     width: 60%;
     height: 100%;
-    padding-left: 15px;
+    padding-left: 30px;
     padding-right: 30px;
     flex: 1 0 60%;
     overflow-y: auto;
@@ -203,14 +205,14 @@
           text-transform: capitalize;
           font-size: 24px;
           line-height: 32px;
-          padding: 15px 0 0 15px;
+          padding: 15px 0 0 0;
           margin-bottom: auto;
         }
 
         &__id {
           font-size: 14px;
           color: #6e7a96;
-          padding: 0 0 0 15px;
+          padding: 0;
           margin-top: auto;
         }
 
@@ -252,7 +254,6 @@
     }
     &__filters {
       display: flex;
-      padding-left: 15px;
       margin-top: 30px;
 
       &__height-and-weight {
@@ -320,7 +321,6 @@
     }
 
     &__type {
-      padding-left: 15px;
       margin-bottom: auto;
       font-weight: bold;
       font-size: 12px;
@@ -332,7 +332,6 @@
     &__types {
       display: flex;
       align-items: center;
-      padding-left: 15px;
       border-bottom: 1px dashed #d1d7e5;
       padding-bottom: 20px;
 
@@ -349,14 +348,13 @@
     }
     &__stats {
       flex-wrap: wrap;
-      padding-left: 15px;
-      margin-top: 30px;
-      border-bottom: 1px dashed #d1d7e5;
-      padding-bottom: 30px;
+      padding-right: 30px;
+      padding-bottom: 20px;
 
       &__title {
         font-size: 16px;
         line-height: 24px;
+        margin-top: 0;
       }
       &__name {
         font-size: 12px;
@@ -384,14 +382,16 @@
     }
 
     &__teams {
-      padding-left: 15px;
       margin-top: 50px;
-      padding-bottom: 100px;
+      padding-bottom: 180px;
+      width: auto;
       @include media-breakpoint-down(sm) {
         padding-bottom: 100px;
       }
 
       &__title {
+        padding-top: 30px;
+        border-top: 1px dashed #d1d7e5;
         font-size: 16px;
         line-height: 24px;
       }
@@ -532,19 +532,48 @@
 
 .details-stats {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
+  margin-top: 30px;
+  @include media-breakpoint-down(sm) {
+    display: block;
+  }
+}
+
+.arrow-container {
+  display: flex;
+  padding: 0 10px;
+  justify-content: center;
+  align-items: center;
+  max-width: 100px;
+  width: 50px;
 }
 
 .arrow-img {
-  width: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 16px;
   height: 0px;
   border: 1px solid #d1d7e5;
 }
 
 .arrow-ball {
   height: 4px;
-  width: 4px;
+  width: 100%;
+  max-width: 4px;
   border: 1px solid #d1d7e5;
   border-radius: 4px;
+}
+
+.paragraph {
+  margin: auto;
+  font-family: Nunito;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  @include media-breakpoint-down(sm) {
+    padding-top: 30px;
+  }
 }
