--- a/pokedex/src/sass/_pokemonDetails.scss
+++ b/pokedex/src/sass/_pokemonDetails.scss
@@ -535,7 +535,7 @@
   align-items: flex-start;
   justify-content: space-between;
   margin-top: 30px;
-  @include media-breakpoint-down(sm) {
+  @include media-breakpoint-down(xl) {
     display: block;
   }
 }
@@ -573,7 +573,7 @@
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
-  @include media-breakpoint-down(sm) {
+  @include media-breakpoint-down(xl) {
     padding-top: 30px;
   }
 }
