--- a/pokedex/src/sass/_app.scss
+++ b/pokedex/src/sass/_app.scss
@@ -35,9 +35,7 @@
   &__header {
     display: flex;
     border-bottom: 1px solid rgb(214, 214, 214);
-    font-family: 'Nunito';
-    font-style: normal;
-    font-weight: bold;
+    @extend %font-value;
     color: var(--black-color);
     font-size: 14px;
     align-items: center;
@@ -67,7 +65,6 @@
       text-decoration: none;
       cursor: pointer;
       @include media-breakpoint-down(sm) {
-        // border-bottom: 2px solid var(--blue-color);
         margin: 0;
       }
 
@@ -76,8 +73,6 @@
       }
 
       &__paragraph {
-        // color: var(--blue-color);
-        // border-bottom: 2px solid var(--blue-color);
         margin-bottom: 7px;
         justify-content: center;
         @include media-breakpoint-down(sm) {
@@ -159,9 +154,7 @@
 
     &__paragraph {
       display: inline-block;
-      font-family: 'Nunito';
-      font-style: normal;
-      font-weight: bold;
+      @extend %font-value;
       width: 98px;
       height: 32px;
       font-size: 24px;
@@ -197,9 +190,7 @@
 
     &__button {
       display: flex;
-      font-family: 'Nunito';
-      font-style: normal;
-      font-weight: bold;
+      @extend %font-value;
       border: 1px solid rgb(214, 214, 214);
       background-color: transparent;
       border-radius: 4px;
