--- a/pokedex/src/sass/_signIn.scss
+++ b/pokedex/src/sass/_signIn.scss
@@ -16,9 +16,7 @@
       }
 
       &__title {
-        font-family: Nunito;
-        font-style: normal;
-        font-weight: bold;
+        @extend %font-value;
         font-size: 24px;
         text-align: center;
         color: #2b3140;
@@ -43,6 +41,7 @@
         height: 100%;
 
         &__input {
+          @extend %font-value;
           width: 100%;
           height: 48px;
           max-width: 432px;
@@ -50,9 +49,6 @@
           border: 1px solid #d1d7e5;
           box-sizing: border-box;
           border-radius: 8px;
-          font-family: Nunito;
-          font-style: normal;
-          font-weight: normal;
           font-size: 14px;
           color: #6e7a96;
           margin-bottom: 24px;
@@ -64,9 +60,7 @@
         margin-bottom: 20px;
 
         &__paragraph {
-          font-family: Nunito;
-          font-style: normal;
-          font-weight: bold;
+          @extend %font-value;
           font-size: 14px;
           line-height: 20px;
           color: #3156c6;
@@ -78,6 +72,7 @@
         height: 100%;
 
         &__sign-in-button {
+          @extend %font-value;
           width: 100%;
           max-width: 432px;
           height: 44px;
@@ -90,14 +85,12 @@
           border-radius: 4px;
           border: transparent;
           color: #ffffff;
-          font-family: Nunito;
-          font-style: normal;
-          font-weight: bold;
           font-size: 14px;
           line-height: 20px;
         }
 
         &__sign-up-button {
+          @extend %font-value;
           width: 100%;
           max-width: 432px;
           height: 44px;
@@ -106,9 +99,6 @@
           flex-direction: row;
           justify-content: center;
           align-items: center;
-          font-family: Nunito;
-          font-style: normal;
-          font-weight: bold;
           font-size: 14px;
           line-height: 20px;
           text-align: center;
